[package]
name = "raste"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies.heed]
version = "0.11.0"
optional = true

[dependencies.rocksdb]
version = "0.22.0"
default-features = false
features = ["zstd"]
optional = true

[features]
default = [ "rocksdb" ]

lmdb = [ "dep:heed" ]
rocksdb = [ "dep:rocksdb" ]
